--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
 # Compiled output
 /dist
 /tmp
@@ -8,8 +6,18 @@
 
 # Node
 /node_modules
-npm-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Angular cache
+/.angular/cache
+
+# Coverage / test
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
 
 # IDEs and editors
 .idea/
@@ -28,15 +36,15 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# OS junk
 .DS_Store
 Thumbs.db
+
+# Env files (NO subir secretos locales)
+.env
+.env.*
+!.env.example
+
+# Misc
+.sass-cache/
+/connect.lock
