--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/styles/global.scss"
             ],
             "scripts": []
           },
