--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "^18.2.12",
     "@angular/platform-browser-dynamic": "^18.2.12",
     "@angular/router": "^18.2.12",
+    "keycloak-js": "^24.0.5",
+    "lucide-angular": "^0.544.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.10"
@@ -24,6 +26,10 @@
     "@angular-devkit/build-angular": "^18.2.21",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.4"
   }
 }
