--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           };
           TS
           echo "----- environments.ts -----"
-          cat src/environments.ts
+          cat src/environments/environments.ts
 
       - name: Build (production)
         run: npm run build -- --configuration production
