--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,23 @@
-name: deploy
+name: web-ci
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
-  build:
-    name: Build Angular (CI)
+  build-push:
     runs-on: ubuntu-latest
+    outputs:
+      tag_sha: ${{ steps.meta.outputs.tag_sha }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
@@ -21,40 +25,59 @@ jobs:
       - name: Install deps
         run: npm install
 
-      - name: Build (production)
+      - name: Build web
         run: npm run build -- --configuration production
 
-      - name: Archive dist
+      - uses: docker/setup-buildx-action@v3
+
+      - name: Login a GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Compute tags
+        id: meta
         run: |
-          mkdir -p artifact
-          tar -C dist -czf artifact/web-dist-${GITHUB_SHA}.tgz .
+          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE="ghcr.io/${OWNER}/fastfood-web"
+          SHORT=${GITHUB_SHA::7}
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+          echo "tag_dev=$IMAGE:dev" >> $GITHUB_OUTPUT
+          echo "tag_sha=$IMAGE:sha-$SHORT" >> $GITHUB_OUTPUT
+
+      - name: Build & push image
+        uses: docker/build-push-action@v6
         with:
-          name: web-dist
-          path: artifact/web-dist-${{ github.sha }}.tgz
-          retention-days: 7
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ${{ steps.meta.outputs.tag_dev }}
+            ${{ steps.meta.outputs.tag_sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  deploy:
-    name: Activate on server (self-hosted)
-    needs: build
-    runs-on: [ self-hosted, linux, X64 ]
+  deploy-dev:
+    needs: build-push
+    runs-on: self-hosted
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: web-dist
-          path: /tmp
+      - name: Login a GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
-      - name: Unpack and activate
+      - name: Deploy web
         run: |
           set -e
-          APP_DIR="/var/www/fastfood-web"
-          REL_DIR="$APP_DIR/releases/${GITHUB_SHA}"
-          mkdir -p "$REL_DIR/dist"
-          tar -xzf /tmp/web-dist-${GITHUB_SHA}.tgz -C "$REL_DIR/dist"
-          sudo /usr/local/bin/ffw-activate.sh "$REL_DIR/dist"
+          COMPOSE_ENV="/opt/apps/stack/.compose.env"
+          TAG='${{ needs.build-push.outputs.tag_sha }}'
 
-      - name: Show current symlink
-        run: ls -l /var/www/fastfood-web
+          echo "IMAGE_TAG_WEB=${TAG##*:}" >> "$COMPOSE_ENV"
+
+          echo "Desplegando Web: $TAG"
+
+          cd /opt/apps/stack
+          docker compose pull web
+          docker compose up -d --force-recreate web
+          docker image prune -f
+          echo "Despliegue finalizado."
