--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ permissions:
   contents: read
   packages: write
 
+env:
+  IMAGE_NAME: fastfood-web
+
 jobs:
   build-push:
     runs-on: ubuntu-latest
@@ -17,7 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
@@ -25,12 +29,17 @@ jobs:
       - name: Install deps
         run: npm install
 
-      - name: Build web
+      - name: Build (production)
         run: npm run build -- --configuration production
+
+      - name: Prepare Docker build context
+        run: |
+          mkdir -p docker-dist
+          cp -r dist/* docker-dist/
 
       - uses: docker/setup-buildx-action@v3
 
-      - name: Login a GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -41,10 +50,10 @@ jobs:
         id: meta
         run: |
           OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          IMAGE="ghcr.io/${OWNER}/fastfood-web"
+          IMAGE="ghcr.io/${OWNER}/${{ env.IMAGE_NAME }}"
           SHORT=${GITHUB_SHA::7}
 
-          echo "tag_dev=$IMAGE:dev" >> $GITHUB_OUTPUT
+          echo "tag_latest=$IMAGE:latest" >> $GITHUB_OUTPUT
           echo "tag_sha=$IMAGE:sha-$SHORT" >> $GITHUB_OUTPUT
 
       - name: Build & push image
@@ -54,30 +63,45 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ${{ steps.meta.outputs.tag_dev }}
+            ${{ steps.meta.outputs.tag_latest }}
             ${{ steps.meta.outputs.tag_sha }}
+          build-args: |
+            BUILD_SHA=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  deploy-dev:
+
+  deploy:
+    name: Deploy on VPS
     needs: build-push
     runs-on: self-hosted
     steps:
-      - name: Login a GHCR
+      - name: Login to GHCR
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
-      - name: Deploy web
+      - name: Deploy Web
         run: |
           set -e
-          COMPOSE_ENV="/opt/apps/stack/.compose.env"
+          COMPOSE_ENV="/opt/palaspapas/infra/.compose.env-web"
           TAG='${{ needs.build-push.outputs.tag_sha }}'
 
-          echo "IMAGE_TAG_WEB=${TAG##*:}" >> "$COMPOSE_ENV"
+          mkdir -p /opt/palaspapas/infra
 
-          echo "Desplegando Web: $TAG"
+          echo "IMAGE_TAG_WEB=${TAG##*:}" > "$COMPOSE_ENV"
 
-          cd /opt/apps/stack
+          echo " Desplegando Web: $TAG"
+
+          cd /opt/palaspapas/infra
+
           docker compose pull web
           docker compose up -d --force-recreate web
           docker image prune -f
-          echo "Despliegue finalizado."
+
+          sleep 5
+          if ! docker compose ps web | grep -q "Up"; then
+            echo " Error: web no está corriendo"
+            docker compose logs --tail=50 web
+            exit 1
+          fi
+
+          echo " Despliegue Web exitoso"
