--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,11 @@ jobs:
 
       - name: Build (production)
         run: npm run build -- --configuration production
+      - name: List dist contents
+        run: |
+          echo "=== dist ==="
+          ls -R dist || true
+
 
       - name: Prepare Docker build context
         run: |
