mejora en nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,23 @@
 server {
     listen 80;
-    server_name _;
-
+    server_name localhost;
+    
     root /usr/share/nginx/html;
     index index.html;
-
-    # Cache básico de assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        try_files $uri =404;
-        expires 30d;
-        add_header Cache-Control "public";
-    }
-
-    # Angular SPA: redirige TODAS las rutas a index.html
+    
+    # Importante para Angular - todas las rutas van a index.html
     location / {
         try_files $uri $uri/ /index.html;
     }
+    
+    # Cache para assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
 }
