--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,111 +2,141 @@ name: web-ci
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop, main ]
+  pull_request:
+    branches: [ develop, main ]
   workflow_dispatch:
+
+concurrency:
+  group: web-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: read
-  packages: write
 
 env:
   IMAGE_NAME: fastfood-web
+  INFRA_DIR: /opt/palaspapas/infra
+  COMPOSE_SERVICE: web
+  ENV_FILE_DEV: /opt/palaspapas/infra/.env.develop
+  ENV_FILE_PROD: /opt/palaspapas/infra/.env.prod
 
 jobs:
   build-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     outputs:
+      tag_latest: ${{ steps.meta.outputs.tag_latest }}
       tag_sha: ${{ steps.meta.outputs.tag_sha }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Install deps
-        run: npm install
-
-      - name: Build (production)
-        run: npm run build -- --configuration production
-
-      - name: Prepare Docker build context
-        run: |
-          rm -rf docker-dist
-          mkdir -p docker-dist
-          
-          echo "=== Copiando dist/webapp/browser ==="
-          cp -r dist/webapp/browser/* docker-dist/
-          
-          echo "=== Copiando index.html (por si acaso) ==="
-          cp dist/webapp/index.html docker-dist/ 2>/dev/null || true
-
-          echo "=== Contenido final de docker-dist/ ==="
-          ls -R docker-dist
-
-      - uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
+      - name: Login GHCR (solo push)
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Compute tags
+      - name: Tags
         id: meta
         run: |
-          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          IMAGE="ghcr.io/${OWNER}/${{ env.IMAGE_NAME }}"
-          SHORT=${GITHUB_SHA::7}
+          IMAGE="ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}"
+          SHORT="${GITHUB_SHA::7}"
+          echo "tag_latest=$IMAGE:latest" >> "$GITHUB_OUTPUT"
+          echo "tag_sha=$IMAGE:sha-$SHORT" >> "$GITHUB_OUTPUT"
 
-          echo "tag_latest=$IMAGE:latest" >> $GITHUB_OUTPUT
-          echo "tag_sha=$IMAGE:sha-$SHORT" >> $GITHUB_OUTPUT
-
-      - name: Build & push image
+      - name: Build (y push si aplica)
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: |
             ${{ steps.meta.outputs.tag_latest }}
             ${{ steps.meta.outputs.tag_sha }}
-          build-args: |
-            BUILD_SHA=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  deploy:
-    name: Deploy on VPS
+  deploy-develop:
     needs: build-push
-    runs-on: self-hosted
+    if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+    runs-on: [ self-hosted, develop ]
+    environment: develop
+    permissions:
+      contents: read
+      packages: read
     steps:
-      - name: Login to GHCR
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      - name: Login GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
-      - name: Deploy Web
+      - name: Deploy WEB (develop)
+        shell: bash
         run: |
-          set -e
+          set -euo pipefail
+          INFRA_DIR="${{ env.INFRA_DIR }}"
+          ENV_FILE="${{ env.ENV_FILE_DEV }}"
+          SERVICE="${{ env.COMPOSE_SERVICE }}"
+          TAG="${{ needs.build-push.outputs.tag_sha }}"
+          TAG_VALUE="${TAG##*:}"
 
-          INFRA_DIR="/opt/palaspapas/infra"
-          ENV_FILE="$INFRA_DIR/.env"
+          mkdir -p "$INFRA_DIR"
+          docker network inspect palaspapas_net >/dev/null 2>&1 || docker network create palaspapas_net
 
-          TAG='${{ needs.build-push.outputs.tag_sha }}'
-          echo "IMAGE_TAG_WEB=${TAG##*:}" > "$ENV_FILE"
+          touch "$ENV_FILE"
+          grep -v '^IMAGE_TAG_WEB=' "$ENV_FILE" > "$ENV_FILE.tmp" || true
+          echo "IMAGE_TAG_WEB=$TAG_VALUE" >> "$ENV_FILE.tmp"
+          mv "$ENV_FILE.tmp" "$ENV_FILE"
 
           cd "$INFRA_DIR"
-          docker compose pull web
-          docker compose up -d --force-recreate web
-          docker image prune -f
+          docker compose --env-file "$ENV_FILE" pull "$SERVICE"
+          docker compose --env-file "$ENV_FILE" up -d --force-recreate "$SERVICE"
 
           sleep 5
-          if ! docker compose ps web | grep -q "Up"; then
-            echo "Error: web no está corriendo"
-            docker compose logs --tail=50 web
-            exit 1
-          fi
+          docker compose ps "$SERVICE"
+          docker image prune -f
 
-          echo "Despliegue Web exitoso"
+  deploy-prod:
+    needs: build-push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: [ self-hosted, prod ]
+    environment: production
+    permissions:
+      contents: read
+      packages: read
+    steps:
+      - name: Login GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
+      - name: Deploy WEB (prod)
+        shell: bash
+        run: |
+          set -euo pipefail
+          INFRA_DIR="${{ env.INFRA_DIR }}"
+          ENV_FILE="${{ env.ENV_FILE_PROD }}"
+          SERVICE="${{ env.COMPOSE_SERVICE }}"
+          TAG="${{ needs.build-push.outputs.tag_sha }}"
+          TAG_VALUE="${TAG##*:}"
+
+          mkdir -p "$INFRA_DIR"
+          docker network inspect palaspapas_net >/dev/null 2>&1 || docker network create palaspapas_net
+
+          touch "$ENV_FILE"
+          grep -v '^IMAGE_TAG_WEB=' "$ENV_FILE" > "$ENV_FILE.tmp" || true
+          echo "IMAGE_TAG_WEB=$TAG_VALUE" >> "$ENV_FILE.tmp"
+          mv "$ENV_FILE.tmp" "$ENV_FILE"
+
+          cd "$INFRA_DIR"
+          docker compose --env-file "$ENV_FILE" pull "$SERVICE"
+          docker compose --env-file "$ENV_FILE" up -d --force-recreate "$SERVICE"
+
+          sleep 5
+          docker compose ps "$SERVICE"
+          docker image prune -f
