--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,11 +98,26 @@ jobs:
 
   # 3) Trivy Image scan (solo push) -> GitHub Security (SARIF)
   trivy-image-scan:
+    name: trivy-image-scan (container image)
     runs-on: ubuntu-latest
     needs: [build-push]
     if: ${{ github.event_name == 'push' }}
+    permissions:
+      contents: read
+      packages: read
+      security-events: write
     steps:
-      - name: Trivy (IMAGE) - escaneo de la imagen publicada
+      - name: Login a GHCR (para pull)
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Descargar imagen (sha tag) desde GHCR
+        run: docker pull "${{ needs.build-push.outputs.tag_sha }}"
+
+      - name: Trivy (IMAGE) - escaneo de vulnerabilidades de la imagen
         uses: aquasecurity/trivy-action@0.33.1
         with:
           image-ref: ${{ needs.build-push.outputs.tag_sha }}
