--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,157 +1,42 @@
-name: web-ci
+name: web-deploy
 
 on:
-  push:
-    branches: [develop, main]
-  pull_request:
-    branches: [develop, main]
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["web-ci"]
+    types: [completed]
 
 permissions:
   contents: read
-  packages: write
-  security-events: write
+  packages: read
 
 concurrency:
-  group: web-ci-${{ github.ref }}
+  group: web-deploy-${{ github.event.workflow_run.head_branch }}
   cancel-in-progress: true
 
-env:
-  IMAGE_NAME: fastfood-web
-  INFRA_DIR: /opt/palaspapas/infra
-  COMPOSE_SERVICE: web
-
 jobs:
-  # 1) Escaneo del repo -> GitHub Security (SARIF)
-  trivy-repo-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout del repositorio
-        uses: actions/checkout@v4
-
-      - name: Trivy (FS) - escaneo del repositorio
-        uses: aquasecurity/trivy-action@0.33.1
-        with:
-          scan-type: fs
-          scan-ref: .
-          format: sarif
-          output: trivy-repo-results.sarif
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
-          limit-severities-for-sarif: true
-
-      - name: Publicar SARIF en GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-repo-results.sarif
-
-  # 2) Build & push a GHCR (en PR NO pushea; en push sí)
-  build-push:
-    runs-on: ubuntu-latest
-    outputs:
-      tag_sha: ${{ steps.meta.outputs.tag_sha }}
-      tag_channel: ${{ steps.meta.outputs.tag_channel }}
-    steps:
-      - name: Checkout del repositorio
-        uses: actions/checkout@v4
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login a GHCR
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Calcular tags (SHA + canal develop/prod)
-        id: meta
-        shell: bash
-        run: |
-          OWNER_LC="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
-          IMAGE="ghcr.io/${OWNER_LC}/${IMAGE_NAME}"
-          SHA_SHORT="${GITHUB_SHA::7}"
-
-          if [[ "${GITHUB_REF_NAME}" == "main" ]]; then
-            CHANNEL="prod"
-          else
-            CHANNEL="develop"
-          fi
-
-          echo "tag_sha=${IMAGE}:sha-${SHA_SHORT}" >> "$GITHUB_OUTPUT"
-          echo "tag_channel=${IMAGE}:${CHANNEL}" >> "$GITHUB_OUTPUT"
-
-      - name: Docker build (y push solo en push)
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: Dockerfile
-          platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            ${{ steps.meta.outputs.tag_channel }}
-            ${{ steps.meta.outputs.tag_sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # 3) Trivy Image scan (solo push) -> GitHub Security (SARIF)
-  trivy-image-scan:
-    name: trivy-image-scan (container image)
-    runs-on: ubuntu-latest
-    needs: [build-push]
-    if: ${{ github.event_name == 'push' }}
-    permissions:
-      contents: read
-      packages: read
-      security-events: write
-    steps:
-      - name: Login a GHCR (para pull)
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Descargar imagen (sha tag) desde GHCR
-        run: docker pull "${{ needs.build-push.outputs.tag_sha }}"
-
-      - name: Trivy (IMAGE) - escaneo de vulnerabilidades de la imagen
-        uses: aquasecurity/trivy-action@0.33.1
-        with:
-          image-ref: ${{ needs.build-push.outputs.tag_sha }}
-          format: sarif
-          output: trivy-image-results.sarif
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
-          limit-severities-for-sarif: true
-
-      - name: Publicar SARIF en GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-image-results.sarif
-
-  # 4) Deploy a (develop)
   deploy-develop:
-    runs-on: [self-hosted, develop]
-    needs: [build-push, trivy-image-scan]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
-    environment: develop
+    name: deploy-develop (self-hosted)
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop' }}
+    runs-on: self-hosted
     steps:
-      - name: Autenticarse en GHCR 
+      - name: Login a GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}   
-      - name: Deploy frontend en ambiente develop 
-        shell: bash
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy WEB en develop
         env:
-          TAG: ${{ needs.build-push.outputs.tag_sha }}
+          INFRA_DIR: /opt/palaspapas/infra
+          COMPOSE_SERVICE: web
+          IMAGE: ghcr.io/${{ github.repository_owner }}/fastfood-web
+          SHA: ${{ github.event.workflow_run.head_sha }}
         run: |
           set -euo pipefail
           cd "${INFRA_DIR}"
+          SHORT_SHA="$(echo "${SHA}" | cut -c1-7)"
+          TAG="${IMAGE}:sha-${SHORT_SHA}"
 
           TAG_VALUE="${TAG##*:}"
           export IMAGE_TAG_WEB="${TAG_VALUE}"
@@ -162,26 +47,29 @@ jobs:
           docker image prune -f || true
           docker builder prune -f || true
 
-  # 5) Deploy a VPS (prod)
   deploy-prod:
-    runs-on: [self-hosted, prod]
-    needs: [build-push, trivy-image-scan]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-    environment: production
+    name: deploy-prod (self-hosted)
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
+    runs-on: self-hosted
     steps:
-      - name: Autenticarse en GHCR 
+      - name: Login a GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}   
-      - name: Deploy frontend en ambiente prod (VPS)
-        shell: bash
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy WEB en prod
         env:
-          TAG: ${{ needs.build-push.outputs.tag_sha }}
+          INFRA_DIR: /opt/palaspapas/infra
+          COMPOSE_SERVICE: web
+          IMAGE: ghcr.io/${{ github.repository_owner }}/fastfood-web
+          SHA: ${{ github.event.workflow_run.head_sha }}
         run: |
           set -euo pipefail
           cd "${INFRA_DIR}"
+          SHORT_SHA="$(echo "${SHA}" | cut -c1-7)"
+          TAG="${IMAGE}:sha-${SHORT_SHA}"
 
           TAG_VALUE="${TAG##*:}"
           export IMAGE_TAG_WEB="${TAG_VALUE}"
