--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: web-deploy
+name: APP - Deploy
 
 on:
   workflow_run:
-    workflows: ["web-ci"]
+    workflows: ["APP - CI"]
     types: [completed]
 
 permissions:
@@ -13,67 +13,72 @@ concurrency:
   group: web-deploy-${{ github.event.workflow_run.head_branch }}
   cancel-in-progress: true
 
+env:
+  INFRA_DIR: /opt/palaspapas/infra
+  COMPOSE_SERVICE: web
+  IMAGE_NAME: fastfood-web
+
 jobs:
-  deploy-develop:
-    name: deploy-develop (self-hosted)
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop' }}
-    runs-on: self-hosted
+  deploy_develop:
+    name: Deploy WEB -> develop
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.event == 'push' &&
+      github.event.workflow_run.head_branch == 'develop'
+    runs-on: [self-hosted, develop]
+    environment: develop
     steps:
-      - name: Login a GHCR
+      - name: Login GHCR (pull)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy WEB en develop
-        env:
-          INFRA_DIR: /opt/palaspapas/infra
-          COMPOSE_SERVICE: web
-          IMAGE: ghcr.io/${{ github.repository_owner }}/fastfood-web
-          SHA: ${{ github.event.workflow_run.head_sha }}
+      - name: Pull & Restart WEB (develop)
+        shell: bash
         run: |
           set -euo pipefail
+          OWNER_LC="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
+          SHORT_SHA="$(echo "${{ github.event.workflow_run.head_sha }}" | cut -c1-7)"
+          TAG="ghcr.io/${OWNER_LC}/${IMAGE_NAME}:sha-${SHORT_SHA}"
+
           cd "${INFRA_DIR}"
-          SHORT_SHA="$(echo "${SHA}" | cut -c1-7)"
-          TAG="${IMAGE}:sha-${SHORT_SHA}"
 
-          TAG_VALUE="${TAG##*:}"
-          export IMAGE_TAG_WEB="${TAG_VALUE}"
-
+          export IMAGE_TAG_WEB="${TAG##*:}"
           docker compose pull "${COMPOSE_SERVICE}"
           docker compose up -d --force-recreate --no-deps "${COMPOSE_SERVICE}"
 
           docker image prune -f || true
           docker builder prune -f || true
 
-  deploy-prod:
-    name: deploy-prod (self-hosted)
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
-    runs-on: self-hosted
+  deploy_prod:
+    name: Deploy WEB -> prod 
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.event == 'push' &&
+      github.event.workflow_run.head_branch == 'main'
+    runs-on: [self-hosted, prod]
+    environment: production
     steps:
-      - name: Login a GHCR
+      - name: Login GHCR (pull)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy WEB en prod
-        env:
-          INFRA_DIR: /opt/palaspapas/infra
-          COMPOSE_SERVICE: web
-          IMAGE: ghcr.io/${{ github.repository_owner }}/fastfood-web
-          SHA: ${{ github.event.workflow_run.head_sha }}
+      - name: Pull & Restart WEB (prod)
+        shell: bash
         run: |
           set -euo pipefail
+          OWNER_LC="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
+          SHORT_SHA="$(echo "${{ github.event.workflow_run.head_sha }}" | cut -c1-7)"
+          TAG="ghcr.io/${OWNER_LC}/${IMAGE_NAME}:sha-${SHORT_SHA}"
+
           cd "${INFRA_DIR}"
-          SHORT_SHA="$(echo "${SHA}" | cut -c1-7)"
-          TAG="${IMAGE}:sha-${SHORT_SHA}"
 
-          TAG_VALUE="${TAG##*:}"
-          export IMAGE_TAG_WEB="${TAG_VALUE}"
-
+          export IMAGE_TAG_WEB="${TAG##*:}"
           docker compose pull "${COMPOSE_SERVICE}"
           docker compose up -d --force-recreate --no-deps "${COMPOSE_SERVICE}"
 
