--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,112 +1,86 @@
-name: web-ci
+name: APP - Deploy
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["APP - CI"]
+    types: [completed]
 
 permissions:
   contents: read
-  packages: write
+  packages: read
+
+concurrency:
+  group: web-deploy-${{ github.event.workflow_run.head_branch }}
+  cancel-in-progress: true
 
 env:
+  INFRA_DIR: /opt/palaspapas/infra
+  COMPOSE_SERVICE: web
   IMAGE_NAME: fastfood-web
 
 jobs:
-  build-push:
-    runs-on: ubuntu-latest
-    outputs:
-      tag_sha: ${{ steps.meta.outputs.tag_sha }}
+  deploy_develop:
+    name: Deploy WEB -> develop
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.event == 'push' &&
+      github.event.workflow_run.head_branch == 'develop'
+    runs-on: [self-hosted, develop]
+    environment: develop
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install deps
-        run: npm install
-
-      - name: Build (production)
-        run: npm run build -- --configuration production
-
-      - name: Prepare Docker build context
-        run: |
-          rm -rf docker-dist
-          mkdir -p docker-dist
-          
-          echo "=== Copiando dist/webapp/browser ==="
-          cp -r dist/webapp/browser/* docker-dist/
-          
-          echo "=== Copiando index.html (por si acaso) ==="
-          cp dist/webapp/index.html docker-dist/ 2>/dev/null || true
-
-          echo "=== Contenido final de docker-dist/ ==="
-          ls -R docker-dist
-
-      - uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
+      - name: Login GHCR (pull)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Compute tags
-        id: meta
+      - name: Pull & Restart WEB (develop)
+        shell: bash
         run: |
-          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          IMAGE="ghcr.io/${OWNER}/${{ env.IMAGE_NAME }}"
-          SHORT=${GITHUB_SHA::7}
+          set -euo pipefail
+          OWNER_LC="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
+          SHORT_SHA="$(echo "${{ github.event.workflow_run.head_sha }}" | cut -c1-7)"
+          TAG="ghcr.io/${OWNER_LC}/${IMAGE_NAME}:sha-${SHORT_SHA}"
 
-          echo "tag_latest=$IMAGE:latest" >> $GITHUB_OUTPUT
-          echo "tag_sha=$IMAGE:sha-$SHORT" >> $GITHUB_OUTPUT
+          cd "${INFRA_DIR}"
 
-      - name: Build & push image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: |
-            ${{ steps.meta.outputs.tag_latest }}
-            ${{ steps.meta.outputs.tag_sha }}
-          build-args: |
-            BUILD_SHA=${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          export IMAGE_TAG_WEB="${TAG##*:}"
+          docker compose pull "${COMPOSE_SERVICE}"
+          docker compose up -d --force-recreate --no-deps "${COMPOSE_SERVICE}"
 
-  deploy:
-    name: Deploy on VPS
-    needs: build-push
-    runs-on: self-hosted
+          docker image prune -f || true
+          docker builder prune -f || true
+
+  deploy_prod:
+    name: Deploy WEB -> prod 
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.event == 'push' &&
+      github.event.workflow_run.head_branch == 'main'
+    runs-on: [self-hosted, prod]
+    environment: production
     steps:
-      - name: Login to GHCR
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      - name: Login GHCR (pull)
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy Web
+      - name: Pull & Restart WEB (prod)
+        shell: bash
         run: |
-          set -e
+          set -euo pipefail
+          OWNER_LC="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
+          SHORT_SHA="$(echo "${{ github.event.workflow_run.head_sha }}" | cut -c1-7)"
+          TAG="ghcr.io/${OWNER_LC}/${IMAGE_NAME}:sha-${SHORT_SHA}"
 
-          INFRA_DIR="/opt/palaspapas/infra"
-          ENV_FILE="$INFRA_DIR/.env"
+          cd "${INFRA_DIR}"
 
-          TAG='${{ needs.build-push.outputs.tag_sha }}'
-          echo "IMAGE_TAG_WEB=${TAG##*:}" > "$ENV_FILE"
+          export IMAGE_TAG_WEB="${TAG##*:}"
+          docker compose pull "${COMPOSE_SERVICE}"
+          docker compose up -d --force-recreate --no-deps "${COMPOSE_SERVICE}"
 
-          cd "$INFRA_DIR"
-          docker compose pull web
-          docker compose up -d --force-recreate web
-          docker image prune -f
-
-          sleep 5
-          if ! docker compose ps web | grep -q "Up"; then
-            echo "Error: web no está corriendo"
-            docker compose logs --tail=50 web
-            exit 1
-          fi
-
-          echo "Despliegue Web exitoso"
+          docker image prune -f || true
+          docker builder prune -f || true
